Refactored unused dependencies