@@ -1,6 +1,5 @@
 package project_backend.controller;
 
-import org.apache.http.protocol.HTTP;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -8,20 +7,17 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import project_backend.model.ChartImageInputs;
 import project_backend.model.ImageChartApiReq;
-import project_backend.model.questionnaire.Question;
-import project_backend.model.questionnaire.ResultImage;
 import project_backend.service.SurveyService;
 import project_backend.service.UserService;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/")
@@ -56,14 +52,7 @@ public class ChartRestController {
     }
 
     public static String decodeUrl(String givenUrl){
-        String decodedUrl = givenUrl;
-        try{
-            decodedUrl = URLDecoder.decode(givenUrl, StandardCharsets.UTF_8.name());
-
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
-        return decodedUrl;
+        return URLDecoder.decode(givenUrl, StandardCharsets.UTF_8);
     }
 
 }
